# cdb-mw

./: Cargo.toml  README.md
cdb-mw/: Cargo.toml  build.rs
cdb-mw/proto/: filetransfer.proto  storageservice.proto
cdb-mw/src/: app.rs  lib.rs  main.rs  services.rs  shell.rs
cdb-mw/src/services/: file_transfer_service.rs  object_storage_service.rs
raft-store/: Cargo.toml
raft-store/proto/: raft.proto
raft-store/src/: app.rs  lib.rs  raft.rs  raft_network_impl.rs  store.rs
raft-store/tests/: test_cluster.rs
