[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

members = [
    "raft-store",
    #    "cdb-mw"
]

[workspace.dependencies]
openraft = { version = "0.8.3", features = ["serde"] }
rocksdb = "0.21.0"
rust-s3 = "0.33.0"
tokio = { version = "1.29.0", features = ["full"] }
libc = "0.2"
tonic = "0.9.2"
prost = "0.11.9"
clap = { version = "4.3.11", features = ["derive", "env"] }

tonic-build = "0.9.2"