[package]
name = "raft-store"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
openraft = { workspace = true, features = ["serde"] }
rocksdb = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.36"
byteorder = "1.4.3"


[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { version = "3.7.0" }
tokio = { workspace = true }